# vpc-provisioner-api

./: .dockerignore  .gitignore  ASSESSMENT.md  Dockerfile  README.md  docker-compose.yml  mise.toml  pyproject.toml  requirements.txt  samconfig.toml  template-cognito.yaml  template.yaml
.github/workflows/: deploy.yml
localstack/: docker-compose.yml
localstack/ready.d/: init-dynamodb.sh  init-state-bucket.sh
postman/: Serverless VPC Provisioner API.postman_collection.json
serverless/: app.py
tests/: test_main.py
