[project]
name = "vpc-provisioner-api"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "boto3>=1.43.37",
    "boto3-stubs>=1.43.37",
    "fastapi>=0.138.2",
    "mangum>=0.21.0",
    "pydantic>=2.13.4",
    "pyjwt[crypto]>=2.13.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=9.1.1",
]
